# SniffDet

./: .gitignore  CHANGES  CMakeLists.txt  Doxyfile.in  Makefile.am  README  TODO  config.h.in  configure.ac  libsniffdet-uninstalled.pc.in  libsniffdet.3  libsniffdet.pc.in  sniffdet.1  sniffdet.conf.5  sniffdet.spec.in
doc/: RESOURCES  howitworks.txt  libsniffdet-usage-example.c
m4/: auxdevel.m4  define_dirs.m4  dolt.m4
sndet/: BUGS  CHANGES  Makefile  Makefile.am  Makefile.in  README  TODO  config.status  configure  configure.ac  configure.in  libsniffdet-uninstalled.pc.in  libsniffdet.pc.in  sniffdet.1  sniffdet.conf  sniffdet.conf-debug  sniffdet.conf.5  sniffdet.conf.in  sniffdet.spec  sniffdet.spec.in  wc.sh
sndet/doc/: README-autotools  libsniffdet-usage-example.c  target_list.example
sndet/m4/: auxdevel.m4  check.m4
sndet/mk/: auxdevel.am
sndet/src/: Makefile  Makefile.in  README-DEBUG  config.h  config.h.in  config_file.c  iface-utils.c  log.c  log.h  sniffdet.c  sniffdet.h  tags  test-config.c  util.c  util.h
sndet/src/lib/: Makefile  Makefile.in  arptest.c  dnstest.c  helpers.c  icmptest.c  init.c  latencytest.c  libsniffdet.h  ping.c  tags
sndet/src/plugins/: Makefile  Makefile.in  null.c  plugins.h  stdout.c  tags  xml.c
src/: CMakeLists.txt  README-DEBUG  config_file.c  iface-utils.c  log.c  log.h  sniffdet.c  sniffdet.h  test-config.c  util.c  util.h
src/lib/: CMakeLists.txt  arptest.c  dnstest.c  helpers.c  icmptest.c  init.c  latencytest.c  libsniffdet.h  ping.c
src/plugins/: null.c  plugins.h  stdout.c  xml.c
web/: credits.html  docs.html  download.html  faq.html  index.html  news.html  sndet.css
web/pt_BR/: docs.html  download.html  faq.html  index.html  sndet.css
web/releases/0.7/: changelog.txt  todo.txt
web/releases/0.8/: changelog.txt  todo.txt
web/releases/0.9/: changelog.txt  todo.txt
